--- a/src/views/about.html
+++ b/src/views/about.html
@@ -10,13 +10,13 @@
                 <br>
                 <center><h4>Инжиниринговый дивизион Госкорпорации «Росатом» </h4></center>
                 <br>
-                <p>
+                <p><img src="/img/фото.png" width="50%" style="float:left; margin: 10px 20px 20px 0;">
                 - включает в себя четыре ключевые организации: АО ИК «АСЭ» (г. Нижний Новгород) – управляющая компания, АО АСЭ (г. Нижний Новгород), АО «Атомэнергопроект» (г. Москва), АО «АТОМПРОЕКТ» (г. Санкт-Петербург); 
-                </p><p>
+                <br><br>
                 -  занимает более 30% глобального рынка сооружения атомных электростанций;
-                </p><p>
+                <br><br>
                 - оказывает услуги по управлению проектом, проектированию, поставке оборудования и сооружению безопасных и надежных атомных электростанций с реакторами типа ВВЭР поколения III/III+, конкурентоспособных по стоимости и срокам сооружения;
-                </p><p>
+                <br><br>
                 - имеет высокий уровень компетенций управленческой команды и операционного персонала, собственные проектные мощности и инженерно-техническую базу.
                 </p>
                 <br>
