--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -66,15 +66,15 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-0 col-sm-0 col-0"></div>
                 <hr class="col-12">
-                <div class="content-img col-6"></div>
+                <div class="content-img col-6"> <img src="/img/фото.png" width="100%"></div>
                 <div class="content-text col-6">
                                 <center><h4>Инжиниринговый дивизион Госкорпорации «Росатом» </h4></center>
                                 <br>
                                 <p>
                                 - включает в себя четыре ключевые организации: АО ИК «АСЭ» (г. Нижний Новгород) – управляющая компания, АО АСЭ (г. Нижний Новгород), АО «Атомэнергопроект» (г. Москва), АО «АТОМПРОЕКТ» (г. Санкт-Петербург); 
-                                </p><p>
+                                <br>
                                 -  занимает более 30% глобального рынка сооружения атомных электростанций;
-                                </p><p>
+                                <br>
                                 - оказывает услуги по управлению проектом, проектированию, поставке оборудования и сооружению безопасных и надежных атомных электростанций с реакторами типа ВВЭР поколения III/III+, конкурентоспособных по стоимости и срокам сооружения;
                                 </p>
                                        <p><a href="/about"><img src="/img/2стрелки.png" alt=""></a></p> 
