--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -49,9 +49,9 @@
                                     <input class="form-control" type="email" name="email" placeholder="Email"><br>
                                     <input class="form-control" type="text" name="position" placeholder="Должность"><br>
                                     <input class="form-control" type="text" name="organization" placeholder="Организация"><br>
-                                    <p class="group-interest">Введите группу заинтересованных сторон, которую вы представляете
+                                    <p class="group-interest">Выберите группу заинтересованных сторон, которую вы представляете
                                     <select name="group_select">
-                                        <option value="Акционеры: Госкорпорация «Росатом»">Акционеры: Госкорпорация «Росатом»</option>
+                                        <option selected value="Акционеры: Госкорпорация «Росатом»">Акционеры: Госкорпорация «Росатом»</option>
                                         <option value="Поставщики, подрядчики">Поставщики, подрядчики</option>
                                         <option value="Потребители технологий, продукции и услуг на российском рынке и мировом рынке">Потребители технологий, продукции и услуг на российском рынке и мировом рынке</option>
                                         <option value="Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов">Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов</option>
@@ -70,7 +70,7 @@
                                         <option value="Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др.">Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др.</option>
                                         <option value="Общественные организации (кроме экологических)">Общественные организации (кроме экологических)</option>
                                         <option value="Экологические организации">Экологические организации</option>
-                                        <option selected value="Другое">Другое</option>
+                                        <option value="Другое">Другое</option>
                                     </select><br>
                                     <input class="form-control" type="text" name="group_input" placeholder="Другое"></p>
                                     <p class="group-interest">
