--- a/src/views/eventPage.html
+++ b/src/views/eventPage.html
@@ -30,11 +30,11 @@
                                         <div class="mb-2"> 
                                             {%if (event.annotation) %}
                                             <h6>
-                                                  <img src="/img/allreport.png" class="mr-1"><a href="/file/{{ event.annotation }}">Скачать аннотацию</a>
+                                                  <img src="/img/allreport.png" class="mr-1"><a href="/file/{{ event.annotation }}">Скачать протокол</a>
                                             </h6>
                                             {% else %}
                                             <h6>
-                                                  <img src="/img/allreport.png" class="mr-1"><a href="">Аннотация еще не добавлена</a>
+                                                  <img src="/img/allreport.png" class="mr-1"><a href="">Протокол еще не добавлена</a>
                                             </h6>
                                             {% endif %}
                                             
