--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -99,7 +99,7 @@
                                         </select>
                                     </p>
                                     <p class="group-interest">
-                                            Укажите форматы, в которых вы взаимодельствовали с компанией по вопросам публичной отчётности (вопрос обязательный для тех, кто имел такой опыт).  Можно выбрать несколько ответов
+                                            Укажите форматы, в которых вы взаимодельствовали с компанией по вопросам публичной отчётности (вопрос обязательный для тех, кто имел такой опыт).  Можно выбрать несколько ответов<br>
                                             <input type="checkbox" name="history" value="Определение существенных (приоритетных) тем отчета"/>Определение существенных (приоритетных) тем отчета<br/>
                                             <input type="checkbox" name="history" value="Обсуждение концепции отчета"/>Обсуждение концепции отчета<br/>
                                             <input type="checkbox" name="history" value="Общественные слушания проекта годового отчета"/>Общественные слушания проекта годового отчета<br/>
