--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -259,8 +259,12 @@
                         <input type="text" class="form-control" id="eventAddress" name="address"  placeholder="">
                     </div>
                     <div class="form-group">
-                            <label for="annotationIvent">Загрузите анотацию мероприятия</label>
+                            <label for="annotationIvent">Загрузите протокол мероприятия</label>
                             <input type="file" accept="application/pdf" class="form-control-file" id="annotationIvent" name="annotation">
+                    </div>
+                    <div class="form-group">
+                            <label for="presentationIvent">Загрузите презентацию мероприятия (.pdf или .zip)</label>
+                            <input type="file"  class="form-control-file" id="presentationIvent" name="presentation">
                     </div>
                     <div class="form-group">
                             <label for="imgEvent">Загрузите фото к мероприятию</label>
