--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -200,6 +200,25 @@
                   <p>введите дату начала: <input type="date" name="firstDate"> 
                     введите дату завершения: <input type="date" name="lastDate"></p>
                   <p>Прикрепить файл: <input name="file" type="file">  </p>
+                                        <input class="interest1" type="checkbox" name="interest" value="Акционеры: Госкорпорация «Росатом»">Акционеры: Госкорпорация «Росатом» <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Поставщики, подрядчики">Поставщики, подрядчики <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Потребители технологий, продукции и услуг на российском рынке и мировом рынке">Потребители технологий, продукции и услуг на российском рынке и мировом рынке <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов">Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Конкуренты на мировом рынке технологий, продукции и услуг">Конкуренты на мировом рынке технологий, продукции и услуг <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Органы местного самоуправления в регионах присутствия">Органы местного самоуправления в регионах присутствия <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Органы контроля и надзора: Федеральная служба по экологическому, технологическому и атомному надзору">Органы контроля и надзора: Федеральная служба по экологическому, технологическому и атомному надзору <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Государственные органы зарубежных стран">Государственные органы зарубежных стран <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Международные организации и ассоциации, в т. ч. ядерного сектора: МАГАТЭ (IAEA), WANO, WNA, Агентство по атомной энергии, ОЭСР">Международные организации и ассоциации, в т. ч. ядерного сектора: МАГАТЭ (IAEA), WANO, WNA, Агентство по атомной энергии, ОЭСР <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Экспертное и профессиональное сообщество: Торгово-промышленная палата РФ, Российский союз промышленников и предпринимателей и др.">Экспертное и профессиональное сообщество: Торгово-промышленная палата РФ, Российский союз промышленников и предпринимателей и др. <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Рейтинговые агентства, аналитики рынка">Рейтинговые агентства, аналитики рынка <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Финансовые институты и инвестиционное сообщество">Финансовые институты и инвестиционное сообщество <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Научное сообщество: НИИ, Академия наук и др.">Научное сообщество: НИИ, Академия наук и др. <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Топ-менеджмент дочерних обществ">Топ-менеджмент дочерних обществ <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Население регионов присутствия (представители общественности)">Население регионов присутствия (представители общественности) <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Средства массовой информации">Средства массовой информации <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др.">Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др. <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Общественные организации (кроме экологических)">Общественные организации (кроме экологических) <br>
+                                        <input class="interest1" type="checkbox" name="interest" value="Экологические организации">Экологические организации <br>
                   <p>Stakeholders list:<br>
                       {% for st in sHolder %}
                       <label><input type="checkbox" name='access' value={{st.login}} /> {{st.login}}</label><br>
