--- a/src/views/events.html
+++ b/src/views/events.html
@@ -18,7 +18,7 @@
                   <a class="text-dark" href="/events/id/{{event._id}}" >{{event.name}}</a>
                 </h3>
                 
-                <div class="mb-1 text-muted mb-auto">{{event.eventDate}}</div>
+                <div class="mb-1 text-muted mb-auto">{{event.date}}</div>
                   <div class="container">
                     <div class="row justify-content-around">
                         <div class="mb-2">
