--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -13,7 +13,7 @@
                         <p class="h-ev">События и мероприятия</p>
                         {%for e in events%}
                         <a class="event" href={{'/events/id/'+e.id}}>
-                        <p><img src="/img/event.png" alt=""><span class="date"> {{e.eventDate}}</span><br>
+                        <p><img src="/img/event.png" alt=""><span class="date"> {{e.date}}</span><br>
                         {{e.name}}<br>
                         <img src="/img/стрелка.png" alt="">
                         </p>
