--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -18,7 +18,7 @@
                   <a class="text-dark" href="/publicreport/id/{{report._id}}" >{{report.name}}</a>
                 </h3>
                 
-                <div class="mb-1 text-muted mb-auto">{{report.creatingDate}}</div>
+                <div class="mb-1 text-muted mb-auto">{{report.date}}</div>
                   <div class="container">
                     <div class="row justify-content-around">
                             <div class="mb-2 smallbox"> 
