--- a/src/views/templates/sideMenuTemplate.html
+++ b/src/views/templates/sideMenuTemplate.html
@@ -51,7 +51,7 @@
                 <li>
                         <a href="/instruction">
                                 <div class="wrapper">
-                                        <!-- <img src="/img/lk/about_company.png" alt="psurveys"> -->
+                                        <img src="/img/lk/inst.png" alt="psurveys">
                                         Инструкция для стейхолдера
                                 </div>
                         </a>
@@ -59,7 +59,7 @@
                 <li>
                         <a href="/feedback">
                                         <div class="wrapper">
-                                                <!-- <img src="/img/lk/about_company.png" alt="psurveys"> -->
+                                                <img src="/img/lk/about.png" alt="psurveys">
                                                 Обратная связь
                                         </div>
                                 </a>
