--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -76,14 +76,14 @@
         <div class="col-md-4">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                      <a class="nav-link auth active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Пользователь</a>
+                      <a class="nav-link auth active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Стейкхолдер</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link auth" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Стейкхолдер</a>
+                        <a class="nav-link auth " id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Пользователь</a>
                     </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade " id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="autorize-block">
                         <center><h2>Вход</h2></center>
                         <form action="/loginUser" method="POST">
@@ -103,7 +103,7 @@
                             </center>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="autorize-block">
                             <center><h2>Вход</h2></center>
                             <form action="/loginstakeholder" method="POST">
