--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -303,7 +303,7 @@
                     </div>
                     <div class="form-group">
                             <label for="presentationIvent">Загрузите презентацию мероприятия (.pdf или .zip)</label>
-                            <input type="file"  class="form-control-file" id="presentationIvent" name="presentation">
+                            <input type="file"  class="form-control-file" id="presentationIvent" name="prezentation">
                     </div>
                     <div class="form-group">
                             <label for="imgEvent">Загрузите фото к мероприятию</label>
@@ -340,6 +340,7 @@
                     </table>
                     </div>
                     <button type="submit" class="">Создать</button>
+                    <div class="container result"></div>
                   </form>
               
               </div>
