--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -11,7 +11,7 @@
         <div class="col-xl-9 col-md-9 col-sm-9 col-12">
         {% for report in parametr %}
           <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
-          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 280px; height: 400px;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
+          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 280px; height: 100%;;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
               <div class="card-body d-flex flex-column align-items-start">
                 <h3 class="mb-0">
                   <img src="/img/reports.png">
@@ -23,7 +23,7 @@
                     <div class="row justify-content-around">
                         <div class="mb-2"> 
                             <h6>
-                                <img src="img/allreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать pdf отчета на русском</a>
+                                <img src="./img/allreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать pdf отчета на русском</a>
                             </h6>
                             <br>
                             <h5 >
@@ -66,47 +66,4 @@
       
         {% include "templates/sideMenuTemplate.html" %}
     </div>
-<!-- <div class="content row">
-          <div class="col-xl-9 col-md-7 col-sm-7 col-6">
-              {% if(admin) %}
-              <div class="col-md-2">
-                  <a href="/publicreport/new"><button type="button" class="btn btn-secondary btn-lg">
-                      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Создать
-                  </button> </a>           
-              </div>
-              {% endif %}
-          {% for report in parametr %}
-          <div class="card flex-md-row mb-4 box-shadow h-md-250">
-          <img class="card-img-right flex-auto d-none d-lg-block" data-src="" alt="" style="width: 200px; height: 250px;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
-              <div class="card-body d-flex flex-column align-items-start">
-                <h3 class="mb-0">
-                  <a class="text-dark" >{{report.name}}</a>
-                </h3>
-                <div class="mb-1 text-muted">{{report.creatingDate}}</div>
-                <p class="card-text mb-auto">{{report.description}}</p>
-                  <div class="container">
-                    <div class="row justify-content-around">
-                  <h5 class="mb-2">
-                    <a href="/file/{{ report.pdfSrc }}"> скачать pdf отчета на русском</a>
-                  </h5>
-                  <h5 class="mb-2">
-                      <a href="/file/{{ report.pdfEngSrc }}"> скачать pdf отчета на английском</a>
-                  </h5>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            
-          {% endfor %}
-          </div>
-          {% include "templates/sideMenuTemplate.html" %}
-        
-</div> -->
-
-<!-- <div class=" container">
-        <h1 class="text-center">{{ paramebn }}</h1>
-        <div>
-               <a href="/"></a>
-        </div>
-</div> -->
 {% endblock %}
