--- a/src/css/temp.css
+++ b/src/css/temp.css
@@ -241,11 +241,10 @@ footer{
 
 .document .comments .field {
     background-color: #f9f9f9;
-    border: 2px solid #e7e7e7;
-    border-left: none;
-    border-right: none;
-
-    padding: 0 5px;
+    /* border: 2px solid #e7e7e7; */
+    /* border-left: none; */
+    /* border-right: none; */
+    /* padding: 0 5px; */
 }
 
 .document .comments-title {
@@ -259,8 +258,11 @@ footer{
     color: #929292;
     font-size: 9pt;
     font-weight: bold;
-
     margin-bottom: 5px;
+    border: 2px solid #e7e7e7;
+    border-left: none;
+    border-right: none;
+    padding-bottom: 5px;
 }
 
 .document .comments .comment {
@@ -280,7 +282,7 @@ footer{
 
 .document .comments .comment.right .text {
     margin-left: 5px;
-
+    width: 100%;
     float: right;
 }
 
@@ -497,3 +499,27 @@ button {
     width: 130px;
     cursor:pointer;
 }
+.comment.right {
+    width: 85%;
+    border: 1px solid #e7e7e7;
+    border-radius: 20px;
+    padding: 5px 5px;
+    margin-bottom: 5px;
+}
+
+.comment.right>*, .comment.left > * {
+    display: block;
+}
+
+.comment.left {
+    width: 85%;
+    border: 1px solid #e7e7e7;
+    border-radius: 20px;
+    padding: 5px;
+    margin-bottom: 5px; }
+
+
+    .comments {
+        overflow-y: scroll;
+        max-height: 300px;
+    }
