--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -377,7 +377,7 @@
   </div>
     
   
-  <div class="confirmSh">
+  <div class="confirmSh" id="confirmsSH">
     <div class="container">
       <div class="confirmSh-titel">
         <img src="/img/confirmSh.png">
