--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -25,8 +25,8 @@
                                     <img src="img/flag_rf.png">
                             <h6>
                                
-                                <img src="img/allreport.png"><a href="/file/{{ report.rusSmall }}"> Cкачать сокращенный отчет pdf на русском</a> <br>
-                                <img src="img/fullreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать весь отчет pdf на русском</a>
+                                <img src="img/allreport.png"><a href="/file/{{ report.rusSmall }}"> Cкачать краткий отчет pdf на русском</a> <br>
+                                <img src="img/fullreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать полный отчет pdf на русском</a>
                             </h6>
                             <br>
                             <h5 >
@@ -43,8 +43,8 @@
                           <div class="mb-2 box"> 
                                 <img src="img/flag_ang.png">
                               <h6>
-                                <img src="img/allreport.png"><a href="/file/{{ report.engSmall }}"> Cкачать сокращенный отчет pdf на английском</a><br>
-                                <img src="img/fullreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать весь отчет pdf на английском</a>
+                                <img src="img/allreport.png"><a href="/file/{{ report.engSmall }}"> Cкачать краткий отчет pdf на английском</a><br>
+                                <img src="img/fullreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать полный отчет pdf на английском</a>
                                   
                               </h6>
                               <br>
