--- a/src/views/templates/sideMenuTemplate.html
+++ b/src/views/templates/sideMenuTemplate.html
@@ -52,7 +52,7 @@
                         <a href="/instruction">
                                 <div class="wrapper">
                                         <img src="/img/lk/inst.png" alt="psurveys">
-                                        Инструкция для стейхолдера
+                                        Инструкция для стейкхолдера
                                 </div>
                         </a>
                 </li>
