--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -45,21 +45,21 @@
         {% if (alert == 'erruserpas') %}
         <div class="alert alert-dark" role="alert">
                 <center>
-            Ошибка авторизации! Введен не правильный пароль Пользователя!
+            Ошибка авторизации! Введен неправильный пароль Пользователя!
             </center>
         </div>
         {% endif %}
         {% if (alert == 'errstakepas') %}
         <div class="alert alert-dark" role="alert">
                 <center>
-            Ошибка авторизации! Введен не правильный пароль Стейкхолдера!
+            Ошибка авторизации! Введен неправильный пароль Стейкхолдера!
             </center>
         </div>
         {% endif %}
         {% if (alert == 'errstake') %}
         <div class="alert alert-dark" role="alert">
                 <center>
-            Ошибка авторизации! Введен не правильный логин или пароль Стейкхолдера!
+            Ошибка авторизации! Введен неправильный логин или пароль Стейкхолдера!
             </center>
         </div>
         {% endif %}
@@ -92,7 +92,7 @@
                             <input name="password" class="form-control" type="password" placeholder="Пароль" id="pas">
                             <br>
                             <p>*тут будет капча*</p>
-                            <button class="auth-button btn btn-primary btn-block" type="submit">Авториизация</button>
+                            <button class="auth-button btn btn-primary btn-block" type="submit">Авторизация</button>
                         </form>
                         <center>
                                 <br>
@@ -112,7 +112,7 @@
                                 <input name="password" class="form-control" type="password" placeholder="Пароль" id="pas">
                                 <br>
                                 <p>*тут будет капча*</p>
-                                <button class="auth-button btn btn-primary btn-block" type="submit" >Авториизация</button>
+                                <button class="auth-button btn btn-primary btn-block" type="submit" >Авторизация</button>
                                 
                             </form>
                             <center>
@@ -120,7 +120,7 @@
                                 <u><a href="/registration">Регистрация</a></u>
                                 <br>
                                 <br>
-                                <a href="#">Я не помпню пароль</a>
+                                <a href="#">Я не помню пароль</a>
                             </center>
                         </div>
                 </div>
@@ -130,7 +130,7 @@
             <div class=" ">
                 <img src="/img/info.png" width="32px" height="32px">
                 <p style="font-size:9pt;">«Зарегистрированный пользователь» - любой зарегистрировавшийся посетитель платформы.  Зарегистрированные пользователи, помимо доступа к публичным материалам, размещенным на платформе (годовые отчеты, материалы проведенных мероприятий), получают возможность участвовать в проводимых компанией  публичных опросах и скачивать аналитику по результатам таких опросов. </p>
-                <p style="font-size:9pt;">«Заинтересованные стороны» (стейкхолдеры) - это физические и/или юридические лица, а также группы лиц, которые своими действиями влияют на деятельность Инжинирингового дивизиона Госкорпорации «Росатом» и/или испытывают на себе ее влияние. «Стейкхолдеры» получают расширенный доступ к материалам и функционалу платформы через «личный кабинет».  В личном кабинете стейкхолдеры имеют возможность учувствовать в обсуждении материалов (концепций, проектов отчетов и т.п.), получать персональные приглашения на мероприятия, наряду с общими опросами участвовать в опросах стейкхолдеров и получать аналитику по результатам таких опросов. </p>
+                <p style="font-size:9pt;">«Заинтересованные стороны» (стейкхолдеры) - это физические и/или юридические лица, а также группы лиц, которые своими действиями влияют на деятельность Инжинирингового дивизиона Госкорпорации «Росатом» и/или испытывают на себе ее влияние. «Стейкхолдеры» получают расширенный доступ к материалам и функционалу платформы через «личный кабинет».  В личном кабинете стейкхолдеры имеют возможность участвовать в обсуждении материалов (концепций, проектов отчетов и т.п.), получать персональные приглашения на мероприятия, наряду с общими опросами участвовать в опросах стейкхолдеров и получать аналитику по результатам таких опросов. </p>
             </div>
         </div>
         <div class="col-md-2"></div>
