--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -13,9 +13,9 @@
                         <p class="h-ev">События и мероприятия</p>
                         {%for e in events%}
                         <a class="event" href={{'/events/id/'+e.id}}>
-                        <p><img src="/img/event.png" alt=""><span class="date"> {{e.date}}</span><br>
+                        <p><img src="/img/event.svg" alt="" width="25px" height="25px"><span class="date"> {{e.date}}</span><br>
                         {{e.name}}<br>
-                        <img src="/img/стрелка.png" alt="">
+                        <img src="/img/стрелка.svg" alt="" width="25px" height="25px">
                         </p>
                         <br>
                         </a>
@@ -27,13 +27,13 @@
         <div class="row times col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
 
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/отчеты.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/1.svg" width="25px" height="25px" class="img-menu2">
                         <div class="inner">
                                 <a class="align-self-center" href="/publicreport">Публичные отчеты</a>
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img  align="left" src="/img/опросы.png" width="25px" height="25px" class="img-menu2">
+                        <img  align="left" src="/img/опросы.svg" width="25px" height="25px" class="img-menu2">
                         <div class="inner">
                                 <a class="align-self-center" href="/survey">
                                         Публичные опросы
@@ -41,7 +41,7 @@
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/мероприятия.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/мероприятия.svg" width="25px" height="25px" class="img-menu2">
                         <div class="inner">
                                 <a class="align-self-center" href="/events">
                                        Мероприятия и материалы 
@@ -49,7 +49,7 @@
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/карта.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/карта.svg" width="25px" height="25px" class="img-menu2">
                         <div class="inner2">
                                 <a class="align-self-center" href="/personsmap">
                                         Карта <span class="d-none d-xl-block">заинтересованных сторон</span>
@@ -57,7 +57,7 @@
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/кабинет.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/кабинет.svg" width="25px" height="25px" class="img-menu2">
                         <div class="inner2">
                                 <a class=" align-self-center" href="/lk">
                                         Личные кабинеты <span class="d-none d-xl-block">заинтересованных сторон</span>
